# ic-xgs-monorepo

./: .env.example  .gitignore  .npmrc  .prettierignore  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: deploy.yml  format-lint.yml  tests.yml
apps/auth0/: .env.example  package.json
apps/mobile/: README.md
apps/ssp_backend/: .env.example  Cargo.toml  package.json  ssp_backend.did  turbo.json
apps/ssp_backend/scripts/: build-canister.sh  download-pocket-ic.sh  integration-test.sh  pretest.sh
apps/ssp_backend/src/: lib.rs  utils.rs
apps/ssp_backend/src/controllers/: certificate_controller.rs  config_controller.rs  delegation_controller.rs  init_controller.rs  mod.rs  user_controller.rs
apps/ssp_backend/src/mappings/: certificate.rs  config.rs  mod.rs  user.rs
apps/ssp_backend/src/repositories/: certificate_repository.rs  config_repository.rs  delegation_repository.rs  mod.rs  user_repository.rs
apps/ssp_backend/src/repositories/memories/: certificate_memory.rs  config_memory.rs  delegation_memory.rs  memory_manager.rs  mod.rs  user_memory.rs
apps/ssp_backend/src/repositories/types/: certificate.rs  config.rs  date_time.rs  id_token.rs  mod.rs  salt.rs  user.rs  uuid.rs
apps/ssp_backend/src/services/: access_control_service.rs  certificate_service.rs  config_service.rs  delegation_service.rs  mod.rs  user_service.rs
apps/ssp_backend/src/services/delegation_service/: utils.rs
apps/ssp_backend/src/system_api/: rand.rs  time.rs
apps/ssp_backend/tests/: authenticated.rs  certificate.rs  config.rs  controller_only.rs  delegation.rs
apps/ssp_backend/tests/common/: auth_provider.rs  canister.rs  date_time.rs  identity.rs  mod.rs  test_env.rs
(+6 files in other folders)
